2007-05-15  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-stale-value-bug.c: Improve the test.

        * gconf/gconf-client.c (remove_key_from_cache_recursively_foreach)
        (remove_key_from_cache_foreach): Fix the checks for keys to
        remove.

2007-01-19  Richard Hult  <richard@imendio.com>

	* gconf/gconftool.c: (main): Back out the "killall" change and put
	in a patch instead.

2007-01-17  Richard Hult  <richard@imendio.com>

	* dbus-tests/run-all.sh: Add test that can be used to hammer the
	library and daemon.
	
	* gconf/gconf-database-dbus.c: (database_handle_lookup_ext): Fix
	small leak.
	
	* gconf/gconf-database.c: (source_notify_cb),
	(gconf_database_unset), (gconf_database_recursive_unset): Plug
	small leaks.

	* gconf/gconf-value.c: Fix leaks (bug filed upstream).

	* gconf/gconfd.c: (main), (gconf_main): Make Ctrl-C work, no need
	to ignore that signal. Also ignore the cleanup timeout also when
	quitting on maemo.

2007-01-17  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_unset): Fix a leaked
	GConfValue when unsetting a value.

	* dbus-tests/test-schema-bug.c: Add new test for testing another
	schema usage.

	* gconf/gconftool.c (main): Send TERM instead of HUP since the
	maemo version doesn't have the 30 second timeout to check for the
	reload flag.

	* gconf/gconfd.c (main): Setup up signal handler for the right
	signals in dbus mode (don't try to catch the "error" ones as it
	doesn't make sense, just catch TERM, HUP, USR1).

2007-01-17  Richard Hult  <richard@imendio.com>

	NOTE: This change is just inserted here so that it's not missed
	when listing changes against upstream.

	Back out this, since it's wrong. I've commented in bugzilla upstream.
	
	* gconf/gconf-client.c: Fix error handling in the
	getters.  (#102050, #360224)

2007-01-17  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-stale-value-bug.c: Test more and also make the
	float tests work (use double and check with a delta).